# rnnoise

./: .gitignore  CMakeLists.txt  README  conanfile.txt  run_evaluation.py  sigmos_eval.py
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  README.md  lazy_file_writer.hpp  rnnoise_libsndfile.cpp
header_only/: amalgamate_me.py
include/: rnnoise.h
src/: arch.h  common.h  denoise.c  kiss_fft.h  nnet.c  nnet_arch.h  opus_types.h  parse_lpcnet_weights.c
